--- a/dom/css/style.css
+++ b/dom/css/style.css
@@ -34,7 +34,8 @@
     height: 50%;
     background-color: var(--green);
     font-size: 5rem;
-    transition: all 1s ease-in-out;
+    transition: all 3s ease-in-out;
+    opacity: 1;
   }
   .ligh{
       background-color: var(--green);
@@ -46,4 +47,8 @@
     background-color: var(--yellow);
     color: var(--dark);
     transition: all 3s ease-in-out;
+}
+.dissapear{
+  opacity: 0;
+  transition: all 3s ease-in-out;
 }
