--- a/task-list/css/style.css
+++ b/task-list/css/style.css
@@ -1,4 +1,17 @@
-body {
-  background-color: green;
+:root {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: fSizes(initial);
+}
+
+*,
+::after,
+::before {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 /*# sourceMappingURL=style.css.map */
